--- a/join-us.qmd
+++ b/join-us.qmd
@@ -16,7 +16,7 @@ Prospective graduate students who want to do ecological research on questions re
 
 -   Indicate whether you have applied or would like to work together on a fellowship application (e.g., [NSF GRFP](https://www.nsfgrfp.org/) or [others](https://www.pathwaystoscience.org/Grad.aspx)).
 
--   Your current CV (see advice [here](https://wordvice.com/how-to-write-a-flawless-cv-curriculum-vitae-for-graduate-school/) and [here](https://www.prepscholar.com/gre/blog/how-to-write-a-cv-for-graduate-school/)).
+-   Your current CV (see advice [here](https://wordvice.com/how-to-write-a-flawless-cv-curriculum-vitae-for-graduate-school/) and [here](https://www.prepscholar.com/gre/blog/how-to-write-a-cv-for-graduate-school/) on how to prepare an effective CV).
 
 [^join-us-1]: Changing fields? A record of ecology-focused study and research experience can help, but isn’t necessary. Many great ecologists started off in completely different disciplines. Just be sure to explain why you want to study ecology, and think creatively about how the skills you’ve gained in your discipline can transfer or give you unique insight into ecological processes.
 
@@ -62,7 +62,7 @@ We also may have opportunities during the summer to engage in field research in 
 ## Please check back in December/January for opportunities for summer 2026. *updated fall 2025*
 :::
 
-We typically hire 1-2 summer field technicians to help us collect data from ongoing projects in Colorado (plant population responses to climate change) and/or Michigan (microbial food webs in Sarracenia pitcher plants). Advertisements for these openings will be announced here, on ECOLOG, and other platforms in January/February for fieldwork occurring from June through August. These are great opportunities for nearly- or recently-graduated undergraduate students thinking about graduate school in ecology or work in the environmental sciences. These positions are paid at a competitive hourly rate, plus travel to/from the field station and on-site housing.
+We typically hire 1-2 summer field technicians to help us collect data from ongoing projects in Colorado (plant population responses to climate change) and/or Michigan (microbial food webs in Sarracenia pitcher plants). Advertisements for these openings will be announced here, on [ECOLOG](https://ecologicalsocietyofamerica.org/membership/ecolog/), and other platforms in January/February for fieldwork occurring from June through August. These are great opportunities for nearly- or recently-graduated undergraduate students thinking about graduate school in ecology or work in the environmental sciences. These positions are paid at a competitive hourly rate, plus travel to/from the field station and on-site housing.
 
 ## Academic visitors
 
