clean up render debris

--- a/research/food-web-dynamics.qmd
+++ b/research/food-web-dynamics.qmd
@@ -12,14 +12,14 @@ Communities can take dozens to hundreds of generations for competitive exclusion
 
 ### Decomposing the roles of species interaction intermediaries
 
-Plant species interact with each other through multiple intermediaries: resources, pollinators, and herbivores. Collectively, these intermediaries determine the net interaction sign and magnitude, ranging from competition to facilitation. NSF Graduate Research Fellow [Alden Sears](../people/sears-a/about.qmd) is experimentally decomposing these interactions in a community of wildflowers in the family Asteraceae that differ in the degree to which they share resources, pollinators, and herbivores.
+Plant species interact with each other through multiple intermediaries: resources, pollinators, and herbivores. Collectively, these intermediaries determine the net interaction sign and magnitude—ranging from competition to facilitation—and, ultimately, whether the plant species are able to coexist. NSF Graduate Research Fellow [Alden Sears](../people/sears-a/about.qmd) is experimentally decomposing these interactions in a community of wildflowers in the family Asteraceae that differ in the degree to which they share resources, pollinators, and herbivores.
 
 ![Clipping flower buds to manipulate the density and species composition around focal plants in Colorado. (L to R: Ben Davis, Sarah Hoffman, Alden Sears)](/static/clipping-experiment.jpg){fig-align="center" width="6in"}
 
 ## Selected publications
 
--   Petry, W.K., Kandlikar, G.S., Kraft, N.J.B., Godoy, O. & Levine, J.M. **(2018)** A competition-defence trade-off both promotes and weakens coexistence in an annual plant community. [*Journal of Ecology*]{.underline}, 106, 1806–1818. [\[doi\]](https://doi.org/10.1111/1365-2745.13028) [\[pdf\]](publications/Petry et al. - 2018 - A competition–defence trade-off both promotes and .pdf) [\[data\]](https://doi.org/10.5281/zenodo.1256658)
+-   Petry, W.K., Kandlikar, G.S., Kraft, N.J.B., Godoy, O. & Levine, J.M. **(2018)** A competition-defence trade-off both promotes and weakens coexistence in an annual plant community. [*Journal of Ecology*]{.underline}, 106, 1806–1818. [\[doi\]](https://doi.org/10.1111/1365-2745.13028) [\[pdf\]](publications/Petry%20et%20al.%20-%202018%20-%20A%20competition–defence%20trade-off%20both%20promotes%20and%20.pdf) [\[data\]](https://doi.org/10.5281/zenodo.1256658)
 
--   Blonder, B.W., Gaüzère, P., Iversen, L.L., Ke, P.-J., Petry, W.K., Ray, C.A., Salguero-Gómez, R., Sharpless, W., Violle, C. **(2023)** Predicting and controlling ecological communities via trait and environment mediated parameterizations of dynamical models. [*Oikos*]{.underline}, 2023, e09415. [\[doi\]](https://doi.org/10.1111/oik.09415) [\[pdf\]](publications/Blonder et al. - 2023 - Predicting and controlling ecological communities via trait and environment mediated parameterizatio.pdf) [\[data\]](https://zenodo.org/record/7576397)
+-   Blonder, B.W., Gaüzère, P., Iversen, L.L., Ke, P.-J., Petry, W.K., Ray, C.A., Salguero-Gómez, R., Sharpless, W., Violle, C. **(2023)** Predicting and controlling ecological communities via trait and environment mediated parameterizations of dynamical models. [*Oikos*]{.underline}, 2023, e09415. [\[doi\]](https://doi.org/10.1111/oik.09415) [\[pdf\]](publications/Blonder%20et%20al.%20-%202023%20-%20Predicting%20and%20controlling%20ecological%20communities%20via%20trait%20and%20environment%20mediated%20parameterizatio.pdf) [\[data\]](https://zenodo.org/record/7576397)
 
--   Petry, W.K., Perry, K.I., Fremgen, A., Rudeen, S.K., Lopez, M., Dryburgh, J., Mooney, K.A. **(2013)** Mechanisms underlying plant sexual dimorphism in multi-trophic arthropod communities. [*Ecology*]{.underline}, 94, 2055–2065. [\[doi\]](https://doi.org/10.1890/12-2170.1) [\[pdf\]](publications/Petry et al. - 2013 - Mechanisms underlying plant sexual dimorphism in m.pdf)
+-   Petry, W.K., Perry, K.I., Fremgen, A., Rudeen, S.K., Lopez, M., Dryburgh, J., Mooney, K.A. **(2013)** Mechanisms underlying plant sexual dimorphism in multi-trophic arthropod communities. [*Ecology*]{.underline}, 94, 2055–2065. [\[doi\]](https://doi.org/10.1890/12-2170.1) [\[pdf\]](publications/Petry%20et%20al.%20-%202013%20-%20Mechanisms%20underlying%20plant%20sexual%20dimorphism%20in%20m.pdf)
